tests/ui/g-core-owned-control-label-custom-kind.stderr
error[E0080]: evaluation panicked: core-owned control label is reserved
 --> src/global.rs
  |
  |         validate_control_label_contract::<LABEL, K>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::global::Message<hibana::global::LabelMarker<57>, hibana::substrate::cap::GenericCapToken<FakeRouteDecisionKind>, FakeRouteDecisionKind> as hibana::global::MessageControlSpec>::CONTROL` failed inside this call
  |
note: inside `hibana::global::validate_control_label_contract::<57, FakeRouteDecisionKind>`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global.rs
  |
  |                 panic!("core-owned control label is reserved");
  |                 ---------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  |             let path = match <M as MessageControlSpec>::CONTROL {
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         let from = <From as KnownRole>::INDEX;
  | |         let to = <To as KnownRole>::INDEX;
  | |         crate::global::validate_role_index(from);
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<57>, GenericCapToken<FakeRouteDecisionKind>, FakeRouteDecisionKind>, 0>`
  --> tests/ui/g-core-owned-control-label-custom-kind.rs:46:13
   |
46 |       let _ = g::send::<
   |  _____________^
47 | |         g::Role<0>,
48 | |         g::Role<0>,
49 | |         g::Msg<
...  |
54 | |         0,
55 | |     >();
   | |_______^
